--- a/.env
+++ b/.env
@@ -1,1 +1,20 @@
-OPENAI_API_KEY=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
+
+
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+#DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+#DATABASE_URL='mysql://syc0l8c2rkd9wj2haqum:pscale_pw_4XLU8vFiKupBwV5aOUXLkTUmashRuEH5ylZ7hEJ25EB@aws.connect.psdb.cloud:44307/mai-cover?ssl={"rejectUnauthorized":true}'
+
+#MYSQL_ATTR_SSL_CA='/etc/ssl/certs/ca-certificates.crt'
+
+DATABASE_URL=mysql://root@127.0.0.1:37355/mai-cover
+
+#NEXTAUTH_URL=http://localhost:3000/
+#NEXTAUTH_SECRET= GWHfcF5skihStTFIOOz6ydth1KFMlTM9wbIKLdq1XHM
+#GITHUB_ID=d8b2e02db06b225bdc99
+#GITHUB_SECRET=ac3d499d2a2fa43a20a4041aec3380932fd10f3d
