--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
   },
   "dependencies": {
     "@microsoft/fetch-event-source": "^2.0.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.0.0",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "ai": "^2.1.18",
+    "argon2": "^0.30.3",
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "langchain": "^0.0.108",
     "next": "13.4.9",
+    "next-auth": "^4.22.1",
     "openai-edge": "^1.2.0",
     "postcss": "8.4.25",
     "react": "18.2.0",
@@ -27,9 +31,11 @@
     "react-markdown": "^8.0.7",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6",
+    "zod": "^3.21.4",
     "zustand": "^4.3.9"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9"
+    "@tailwindcss/typography": "^0.5.9",
+    "prisma": "^5.0.0"
   }
 }
