--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
     "@microsoft/fetch-event-source": "^2.0.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.0.0",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "ai": "^2.1.18",
     "argon2": "^0.30.3",
     "autoprefixer": "10.4.14",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "langchain": "^0.0.108",
+    "lucide-react": "^0.261.0",
     "next": "13.4.9",
     "next-auth": "^4.22.1",
     "openai-edge": "^1.2.0",
@@ -30,7 +34,9 @@
     "react-hook-form": "^7.45.1",
     "react-icons": "^4.10.1",
     "react-markdown": "^8.0.7",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
+    "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.6",
     "zod": "^3.21.4",
     "zustand": "^4.3.9"
