--- a/package.json
+++ b/package.json
@@ -15,10 +15,8 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.0.0",
     "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-scroll-area": "^1.0.4",
-    "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.4",
@@ -43,6 +41,7 @@
     "react-hook-form": "^7.45.1",
     "react-icons": "^4.10.1",
     "react-markdown": "^8.0.7",
+    "stripe": "^12.18.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.6",
