--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "clsx": "^2.0.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "immer": "^10.0.2",
     "langchain": "^0.0.108",
     "lucide-react": "^0.261.0",
     "next": "13.4.9",
