--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-hook-form": "^7.45.1",
     "react-icons": "^4.10.1",
     "react-markdown": "^8.0.7",
+    "resend": "^1.0.0",
     "stripe": "^12.18.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
