--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lucide-react": "^0.261.0",
     "next": "13.4.9",
     "next-auth": "^4.23.1",
+    "next-plausible": "^3.11.3",
     "openai-edge": "^1.2.0",
     "postcss": "8.4.25",
     "react": "18.2.0",
